@@ -276,41 +276,6 @@ public class Scp {
         fileInfo.setLastModified(modtime);
     }
 
-    private void sendBytes(Channel channel, byte[] data, String fileName, String mode)
-            throws IOException, RemoteScpException {
-        OutputStream os = channel.getOutputStream();
-        InputStream is = new BufferedInputStream(
-            channel.getInputStream(), SEND_BYTES_BUFFER_LENGTH);
-
-        try {
-            if (channel.isConnected()) {
-                channel.start();
-            } else {
-                channel.connect();
-            }
-        } catch (JSchException e1) {
-            throw (IOException) new IOException("Channel connection problems").initCause(e1);
-        }
-
-        readResponse(is);
-
-        String cline = "C" + mode + " " + data.length + " " + fileName + "\n";
-
-        os.write(cline.getBytes());
-        os.flush();
-
-        readResponse(is);
-
-        os.write(data, 0, data.length);
-        os.write(0);
-        os.flush();
-
-        readResponse(is);
-
-        os.write("E\n".getBytes());
-        os.flush();
-    }
-
     private void sendFile(Channel channel, String localFile, String remoteName, String mode)
             throws IOException, RemoteScpException {
         byte[] buffer = new byte[BUFFER_SIZE];
@@ -480,101 +445,6 @@ public class Scp {
             os.flush();
         }
         return fileInfo;
-    }
-
-    /**
-     * Copy a local file to a remote directory, uses mode 0600 when creating the file on the remote
-     * side.
-     * 
-     * @param localFile
-     *            Path and name of local file.
-     * @param remoteTargetDirectory
-     *            Remote target directory where the file has to end up (optional)
-     * @param remoteName
-     *            target filename to use
-     * @throws IOException
-     *             in case of network problems
-     * @throws RemoteScpException
-     *             in case of problems on the target system (connection ok)
-     */
-    public void put(String localFile, String remoteTargetDirectory, String remoteName)
-            throws IOException, RemoteScpException {
-        put(localFile, remoteTargetDirectory, remoteName, "0600");
-    }
-
-    /**
-     * Create a remote file and copy the contents of the passed byte array into it. Uses mode 0600
-     * for creating the remote file.
-     * 
-     * @param data
-     *            the data to be copied into the remote file.
-     * @param remoteFileName
-     *            The name of the file which will be created in the remote target directory.
-     * @param remoteTargetDirectory
-     *            Remote target directory where the file has to end up (optional)
-     * @throws IOException
-     *             in case of network problems
-     * @throws RemoteScpException
-     *             in case of problems on the target system (connection ok)
-     */
-
-    public void put(byte[] data, String remoteFileName, String remoteTargetDirectory)
-            throws IOException, RemoteScpException {
-        put(data, remoteFileName, remoteTargetDirectory, "0600");
-    }
-
-    /**
-     * Create a remote file and copy the contents of the passed byte array into it. The method use
-     * the specified mode when creating the file on the remote side.
-     * 
-     * @param data
-     *            the data to be copied into the remote file.
-     * @param remoteFileName
-     *            The name of the file which will be created in the remote target directory.
-     * @param remoteTargetDirectory
-     *            Remote target directory where the file has to end up (optional)
-     * @param mode
-     *            a four digit string (e.g., 0644, see "man chmod", "man open")
-     * @throws IOException
-     *             in case of network problems
-     * @throws RemoteScpException
-     *             in case of problems on the target system (connection ok)
-     */
-    public void put(byte[] data, String remoteFileName, String remoteTargetDirectory, String mode)
-            throws IOException, RemoteScpException {
-        ChannelExec channel = null;
-
-        if ((remoteFileName == null) || (mode == null)) {
-            throw new IllegalArgumentException("Null argument.");
-        }
-
-        if (mode.length() != MODE_LENGTH) {
-            throw new IllegalArgumentException("Invalid mode.");
-        }
-
-        for (int i = 0; i < mode.length(); i++) {
-            if (!Character.isDigit(mode.charAt(i))) {
-                throw new IllegalArgumentException("Invalid mode.");
-            }
-        }
-
-        String cmd = "scp -t ";
-        if (remoteTargetDirectory != null && remoteTargetDirectory.length() > 0) {
-            cmd = cmd + "-d " + remoteTargetDirectory;
-        }
-
-        try {
-            channel = getExecChannel();
-            channel.setCommand(cmd);
-            sendBytes(channel, data, remoteFileName, mode);
-            // channel.disconnect();
-        } catch (JSchException e) {
-            if (channel != null) {
-                channel.disconnect();
-            }
-            throw (IOException) new IOException("Error during SCP transfer." + e.getMessage())
-                    .initCause(e);
-        }
     }
 
     /**
